export enum EstadoCivil {
    Soltero = 'Soltero',
    Casado = 'Casado',
    Divorciado = 'Divorciado',
    Viudo = 'Viudo',
    Separado = 'Separado',
}

