// crear interfaz Direccion

export interface Direccion {
    calle: string;
    ciudad: string;
    pais: string;
}
